--- a/app/src/main/res/layout/activity_profile_user.xml
+++ b/app/src/main/res/layout/activity_profile_user.xml
@@ -15,117 +15,266 @@
 
         <include
             layout="@layout/main_toolbar"/>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/background">
 
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="1050dp"
-                tools:layout_editor_absoluteX="-8dp"
-                tools:layout_editor_absoluteY="0dp">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-
-                <Switch
-                    android:id="@+id/editable"
-                    android:layout_width="76dp"
-                    android:layout_height="47dp"
-                    android:layout_marginEnd="8dp"
-                    android:checked="false"
-                    android:onClick="updateText"
-                    android:text="@string/editLink"
-                    android:textColor="@color/logo"
-                    android:textSize="14sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/account_ic" />
-
-                <TextView
-                    android:id="@+id/header"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="40dp"
-                    android:fontFamily="@font/open_sans_light"
-                    android:text="USER PROFILE INFORMATION"
-                    android:textColor="@color/white"
-                    android:textSize="22sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/logo" />
-
-                <TextView
-                    android:id="@+id/firstNameText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="32dp"
-                    android:layout_marginTop="40dp"
-                    android:fontFamily="@font/open_sans"
-                    android:text="First Name"
-                    android:textColor="@color/white"
-                    android:textSize="18sp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/header" />
-
-                <EditText
-                    android:id="@+id/firstNameEdit"
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="32dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="32dp"
-                    android:background="@drawable/rounded_corners"
-                    android:enabled="false"
-                    android:textColor="@color/gray"
-                    android:textSize="18dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/firstNameText" />
+                    android:orientation="vertical" >
 
-                <TextView
-                    android:id="@+id/lastNameText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="32dp"
-                    android:layout_marginTop="40dp"
-                    android:fontFamily="@font/open_sans"
-                    android:text="Last Name"
-                    android:textColor="@color/white"
-                    android:textSize="18sp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/firstNameEdit" />
-
-                <EditText
-                    android:id="@+id/lastNameEdit"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="32dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="32dp"
-                    android:background="@drawable/rounded_corners"
-                    android:enabled="false"
-                    android:textColor="@color/gray"
-                    android:textSize="18dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/lastNameText" />
+                    android:layout_height="1050dp">
 
-                <TextView
-                    android:id="@+id/dobText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="32dp"
-                    android:layout_marginTop="40dp"
-                    android:fontFamily="@font/open_sans"
-                    android:text="Date of Birth"
-                    android:textColor="@color/white"
-                    android:textSize="18sp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/lastNameEdit" />
+                    <Switch
+                        android:id="@+id/editable"
+                        android:layout_width="76dp"
+                        android:layout_height="47dp"
+                        android:checked="false"
+                        android:onClick="updateText"
+                        android:text="@string/editLink"
+                        android:textColor="@color/background3"
+                        android:textSize="14sp"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintTop_totopOf="parent" />
 
+                    <TextView
+                        android:id="@+id/header"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="32dp"
+                        android:fontFamily="@font/open_sans_light"
+                        android:text="USER PROFILE INFORMATION"
+                        android:textColor="@color/white"
+                        android:textSize="22sp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/editable" />
 
-  
-            </ScrollView>
+                    <TextView
+                        android:id="@+id/firstNameText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="40dp"
+                        android:fontFamily="@font/open_sans"
+                        android:text="First Name"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/header" />
+
+                    <EditText
+                        android:id="@+id/firstNameEdit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="32dp"
+                        android:background="@drawable/rounded_corners"
+                        android:enabled="false"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="18dp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/firstNameText" />
+
+                    <TextView
+                        android:id="@+id/lastNameText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="40dp"
+                        android:fontFamily="@font/open_sans"
+                        android:text="Last Name"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/firstNameEdit" />
+
+                    <EditText
+                        android:id="@+id/lastNameEdit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="32dp"
+                        android:background="@drawable/rounded_corners"
+                        android:enabled="false"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="18dp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/lastNameText" />
+
+                    <TextView
+                        android:id="@+id/dobText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="40dp"
+                        android:fontFamily="@font/open_sans"
+                        android:text="Date of Birth"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/lastNameEdit" />
+
+                    <EditText
+                        android:id="@+id/dobEdit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="32dp"
+                        android:background="@drawable/rounded_corners"
+                        android:enabled="false"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="18dp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/dobText" />
+
+                    <TextView
+                        android:id="@+id/addressText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="40dp"
+                        android:fontFamily="@font/open_sans"
+                        android:text="Address"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/dobEdit" />
+
+                    <EditText
+                        android:id="@+id/addressEdit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="32dp"
+                        android:background="@drawable/rounded_corners"
+                        android:enabled="false"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="18dp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/addressText" />
+
+                    <TextView
+                        android:id="@+id/licenseText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="40dp"
+                        android:text="Driver's License Number"
+                        android:fontFamily="@font/open_sans"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/addressEdit" />
+
+                    <EditText
+                        android:id="@+id/licenseEdit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="32dp"
+                        android:background="@drawable/rounded_corners"
+                        android:enabled="false"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="18dp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/licenseText" />
+
+                    <TextView
+                        android:id="@+id/iceContactText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="40dp"
+                        android:text="Emergency Contact Number"
+                        android:textColor="@color/white"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="18sp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/licenseEdit" />
+
+                    <EditText
+                        android:id="@+id/iceContactEdit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="32dp"
+                        android:background="@drawable/rounded_corners"
+                        android:enabled="false"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="18dp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/iceContactText" />
+
+                    <Button
+                        android:id="@+id/accessVehicles"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="45dp"
+                        android:layout_marginTop="40dp"
+                        android:backgroundTint="@color/logo"
+                        android:onClick="edit_vehicle"
+                        android:text="Edit Vehicles"
+                        android:fontFamily="@font/open_sans"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/iceContactEdit" />
+
+                    <Button
+                        android:id="@+id/accessInsurance"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="40dp"
+                        android:layout_marginEnd="45dp"
+                        android:backgroundTint="@color/logo"
+                        android:onClick="edit_insurance"
+                        android:text="Edit Insurance"
+                        android:fontFamily="@font/open_sans"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.862"
+                        app:layout_constraintStart_toEndOf="@id/accessVehicles"
+                        app:layout_constraintTop_toBottomOf="@id/iceContactEdit" />
+
+                    <Button
+                        android:id="@+id/save"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_marginTop="40dp"
+                        android:onClick="save"
+                        android:text="Save"
+                        android:textSize="18dp"
+                        android:fontFamily="@font/open_sans"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.498"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/accessInsurance" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
+        </ScrollView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </LinearLayout>
 
     <RelativeLayout
@@ -133,11 +282,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@android:color/white">
-
         <include
             layout="@layout/main_nav_drawer"/>
-
-
     </RelativeLayout>
-
 </androidx.drawerlayout.widget.DrawerLayout>
